@@ -1,3 +1,8 @@
+2007-10-23: <martin.matuska@wu-wein.ac.at>
+    * New mixinof and instmixinof structures:
+       - new class info options: mixinof instmixinof
+       - on class destroy entry is now removed from mixin 
+         and instmixin lists
 
 2007-10-12: <Gustaf.Neumann@wu-wien.ac.at>
     * Release of XOTcl 1.5.6
